5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1728_2496.log
== TEST (2019-05-08 17:45:06) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	print(soma)
	n=int(input("digite um numero: "))
	
-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:47:49) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:47:57) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
-- EXECUTION TIME:
0.180879
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:48:18) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:48:36) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:49:23) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
-- EXECUTION TIME:
0.144744
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:49:24) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:50:33) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
n=int(input("digite um numero: "))	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    n=int(input())	
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:50:45) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
n=int(input("digite um numero: "))	
-- EXECUTION TIME:
0.264943
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2496/main.py", line 10, in <module>
    n=int(input())	
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:52:24) 
-- CODE:
n=int(input("digite um numero: "))
x=0

while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numer: "))
	
	
-- EXECUTION TIME:
0.134462
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:52:40) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- EXECUTION TIME:
0.15065
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:52:40) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- EXECUTION TIME:
0.112874
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:52:42) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:52:43) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- EXECUTION TIME:
0.157655
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:52:44) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 17:53:00) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("Digite um numero: "))
	
	
-- EXECUTION TIME:
0.221093
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:53:02) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("Digite um numero: "))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 17:54:03) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:03:02) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:03:08) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:03:33) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- EXECUTION TIME:
0.129889
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-525
550
883
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
10953
43606
32653
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:04:38) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:04:45) 
-- CODE:
n=int(input("digite um numero: "))
x=0
while(n!=-1):
	soma=n+x
	x=soma
	print(soma)
	n=int(input("digite um numero: "))
	
	
-- OUTPUT:
-525
550
883
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:22:49) 
-- CODE:
n=int(input("digite um numero: "))
soma=0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:22:49) 
-- CODE:
n=int(input("digite um numero: "))
soma=0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 18:23:10) 
-- CODE:
n=int(input("digite um numero: "))
soma=0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- EXECUTION TIME:
0.170039
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 18:41:12) 
-- CODE:
n=int(input("digite um numero: "))
soma=0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:11:10) 
-- CODE:
n=int(input("digite um numero: "))
soma=0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(som)	
	
	
-- EXECUTION TIME:
0.172774
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1728/2496/main.py", line 6, in <module>
    print(som)	
NameError: name 'som' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:11:15) 
-- CODE:
n=int(input("digite um numero: "))
soma=0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- EXECUTION TIME:
0.176554
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:11:46) 
-- CODE:
n=int(input("digite um numero: "))
soma=0+0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- EXECUTION TIME:
0.156601
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:11:48) 
-- CODE:
n=int(input("digite um numero: "))
soma=0+0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- EXECUTION TIME:
0.099406
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:11:50) 
-- CODE:
n=int(input("digite um numero: "))
soma=0+0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- EXECUTION TIME:
0.221448
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 19:11:51) 
-- CODE:
n=int(input("digite um numero: "))
soma=0+0
while(n!=-1):
	soma=n+soma
	n=int(input("digite um numero: "))
print(soma)	
	
	
-- EXECUTION TIME:
0.174529
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
